--- a/style.css
+++ b/style.css
@@ -36,8 +36,18 @@
     border: 1px solid red;
  justify-content: space-around;
 }
+.rounded-circle{
+    padding:0.5rem;
+}
 footer{
-    border: 1px solid black;
-    padding-top: 3rem;
-    height: 4rem;
+    border-top: 3rem;
+    padding: 1rem;
+}
+.card-container{
+    padding-bottom: 10rem;
+}
+
+.footer-info{
+    font-size: x-large;
+    padding-right: 5rem;
 }
